fix line height and margin on solution check marks, hide paragraph on mobile

--- a/app/assets/stylesheets/homepage/_solution.scss
+++ b/app/assets/stylesheets/homepage/_solution.scss
@@ -250,7 +250,8 @@ section.solution {
         display: flex;
         flex: 1 0 50%;
         align-items: center;
-        margin-bottom: 10px;
+        line-height: 1;
+        margin-bottom: 20px;
 
         img {
           margin-right: 6px;
